[project]
name = "osc_kreuz"
description = "A tool for routing incoming OSC messages to different renderers for spatial audio"
authors = [
    { name = "Max Weidauer", email = "weidauer@campus.tu-berlin.de" },
    { name = "Fares Schulz", email = "fares.schulz@tu-berlin.de" },
    { name = "Paul Schuladen", email = "example@example.org" },
]
maintainers = [
    { name = "Max Weidauer", email = "weidauer@campus.tu-berlin.de" },
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["numpy", "oscpy", "click", "pyYAML"]
license = { file = "LICENSE" }

[project.scripts]
osc-kreuz = "osc_kreuz.osc_kreuz:main"

[project.urls]
Github = "https://github.com/tu-studio/osc-kreuz"
Issues = "https://github.com/tu-studio/osc-kreuz/issues"


[build-system]
requires = ["setuptools >= 61.0.0", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
osc_kreuz = ["*.yml"]

# automatically handle version numbers
[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/osc_kreuz/_version.py"
versionfile_build = "osc_kreuz/_version.py"
tag_prefix = ""
parentdir_prefix = "osc_kreuz-"
